[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.68"
poem = "1.3.57"
poem-openapi = { version = "3", features = ["swagger-ui", "openapi-explorer"]}
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }

[[bin]]
name = "pg-conn"