[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
actix-web = "4"
poem = "1.3.57"
poem-openapi = { version = "3", features = ["swagger-ui", "openapi-explorer"]}
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "macros"] }

[[bin]]
name = "pg-conn"

[[bin]]
name = "tutor-actix-service"